--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "create-db": "node -r dotenv/config setupDB.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aviram Vered",
